feat: send-and-receive-query